--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebSocket-based chat application",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc -b && node ./dist/index.js",
+    "start": "tsc -b && node index.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc -b"
   },
