--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "es2022",  // Change from "commonjs" to "es2022"
+    "module": "es2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "./dist",
     "strict": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"],
+  "include": ["./**/*.ts", "./**/*.js"],
+  "exclude": ["node_modules"]
 }
